--- a/index.html
+++ b/index.html
@@ -1,1 +1,38 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>indexs</title>
+</head>
+<body>
+    <div class="allbox">
+        <div class="box">
+            <img src="img/gbr1.png" alt="error">
+            <h4>PERSONAL</h4>
+            <h5>CUSTOM DOMAINS</h5>
+            <h5>SLEEPS AFTER 30 MINS OF <br> INACTIVITY</h>
+            <h3>FREE</h3>
+            <button type="submit">SIGN UP</button>
+        </div>
+        <div class="box">
+            <img src="img/gbr2.png" alt="error">
+            <h4>SMALL TEAMS</h4>
+            <h5>NEVER SLEEPS</h5>
+            <h5>MULTIPLE WORKERS FOR MORE<br>POWERFUL APPS</h5>
+            <h3>$150</h3>
+            <button type="submit">FREE TRIAL</button>
+        </div>
+        <div class="box">
+            <img src="img/gbr3.png" alt="error">
+            <h4>ENTERPRISE</h4>
+            <h5>DEDICATED</h5>
+            <h5>SIMPLE HORIZONTAL<br>SCALABILITY</h5>
+            <h3>$400</h3>
+            <button type="submit">FREE TRIAL</button>
+        </div>
+    </div>
+</body>
+</html>
